--- a/list.html
+++ b/list.html
@@ -6,15 +6,15 @@
 <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0">
 <link rel="stylesheet" type="text/css" href="/css/common.css">
 
-<title>Entries - mysite😄</title>
-<meta name="description" content="Entries of mysite😄">
+<title>Entries - Perl Newbie</title>
+<meta name="description" content="Entries of Perl Newbie">
   </head>
   <body>
     <div class="container">
       <div class="header">
         <!-- header -->
 <h1>
-  <a href="/">Giblog Web Site</a>
+  <a href="/">Perl Newbie</a>
 </h1>
 
       </div>
@@ -85,7 +85,7 @@
       </div>
       <div class="footer">
         <!-- footer -->
-<a href="https://github.com/yuki-kimoto/giblog">Giblog</a>
+<a href="https://tutorial.perlzemi.com">Perl Seminar</a> & <a href="https://jp.giblog.net/">Giblog</a>
 
       </div>
     </div>
