--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" type="text/css" href="/css/common.css">
 
 <title>Perl Newbie</title>
-<meta name="description" content="How to use Giblog.">
+<meta name="description" content="Perl Newbie is the site for people to leran Perl programing. Perl is good at text processing,Linux server administration, and Web development. You can use Perl on most operation systems. Perl backword compatiblity is very high.">
   </head>
   <body>
     <div class="container">
@@ -26,90 +26,12 @@
 
   </div>
   <div class="middle">
-    <h2><a href="/">How to use Giblog😁</a></h2>
+    <h2><a href="/">Perl Newbie - Perl is good at Text processing, Linux server admin, Web development</a></h2>
 <p>
-  How to use Giblog.
+  Perl Newbie is the site for people to leran Perl programing. Perl is good at <b>text processing</b>,<b>Linux server administration</b>, and <b>Web development</b>. You can use Perl on most operation systems. Perl backword compatiblity is very high.
 </p>
-<h3>Create web site</h3>
 <p>
-  Create web site by new command.
-</p>
-<pre>
-giblog new mysite
-</pre>
-<p>
-  Other prototypes is also available.
-</p>
-<pre>
-giblog new_website mysite
-giblog new_blog mysite
-</pre>
-<p>
-  After creating web site, change directory to mysite
-</p>
-<pre>
-cd mysite
-</pre>
-<h3>Add new entry</h3>
-<p>
-  Add new entry by add command.
-</p>
-<pre>
-giblog add
-</pre>
-<h3>Build</h3>
-<p>
-  Build web site.
-</p>
-<pre>
-giblog build
-</pre>
-<p>
-  If you want to customize build process, you open lib/Giblog/Command/Build.pm and edit run subroutine.
-</p>
-<h3>Serve</h3>
-<p>
-  You can serve your web site by morbo command if you have Mojolicious.
-</p>
-<pre>
-morbo serve.pl
-</pre>
-<p>
-  build command is automatically executed after editting files in templates directory.
-</p>
-<h3>Examples</h3>
-<p>
-  Some examples.
-</p>
-<blockquote>
-  This is a quote.
-</blockquote>
-<div>
-  Hello
-</div>
-<h4>Sub header</h4>
-<pre>
-&lt;&gt;&lt;&gt;&lt;&gt;
-</pre>
-<pre>
-1 &gt; 2;
-1 &lt; 3;
-</pre>
-<ul>
-  <li>Item1</li>
-  <li>Item2</li>
-  <li>Item3</li>
-</ul>
-<table>
-  <tr>
-    <th>Head1</th><th>Head2</th>
-  </tr>
-  <tr>
-    <td>Item1</td><td>Item2</td>
-  </tr>
-</table>
-<p>
-  <a href="https://github.com/yuki-kimoto/giblog">Giblog</a>
+  Perl Newbie chears people who try to learn Perl and use Perl for your development. Let't talk about Perl. "He uses Perl and has much fun."
 </p>
 
   </div>
@@ -124,12 +46,10 @@ morbo serve.pl
           <!-- side -->
 <div class="side-list">
   <div class="side-list-title">
-    Side Bar
+    Menu
   </div>
   <ul>
-    <li>Foo</li>
-    <li>Bar</li>
-    <li>Baz</li>
+    <li><a href="/list.html">Entries</a></li>
   </ul>
 </div>
 
