--- a/list.html
+++ b/list.html
@@ -91,6 +91,9 @@
   <li style="list-style:none">
     3/21 <a href="/blog/20100321126967.html">rindex function - Search for a substring from the end of a string</a>
   </li>
+  <li style="list-style:none">
+    2/25 <a href="/blog/20100225126425.html">File::Basename - Get the base name of a file</a>
+  </li>
   <li style="list-style:none;">
     <b>2008</b>
   </li>
