--- a/list.html
+++ b/list.html
@@ -104,6 +104,9 @@
     9/3 <a href="/blog/20080903122057.html">uc function - Convert lowercase string to uppercase string</a>
   </li>
   <li style="list-style:none">
+    5/20 <a href="/blog/20080520121125.html">unlink function - Delete a file</a>
+  </li>
+  <li style="list-style:none">
     2/25 <a href="/blog/20080225120395.html">index function - Search for string</a>
   </li>
   <li style="list-style:none">
